--- a/_sass/hydeout/_base.scss
+++ b/_sass/hydeout/_base.scss
@@ -24,6 +24,7 @@ html {
 
 body {
   text-size-adjust: 100%;
+  text-align: justify;
 }
 
 main,
@@ -71,7 +72,7 @@ th {
 }
 
 th {
-  text-align: left;
+  text-align: justify;
 }
 
 tbody tr:nth-child(odd) td,
