--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -37,7 +37,7 @@ body {
   padding: $section-spacing;
 
   .site-title {
-    font-family: 'Abril Fatface', serif;
+    font-family: 'Lobster', serif;
     font-size: $large-font-size;
     font-weight: normal;
     margin-bottom: $heading-spacing;
@@ -106,7 +106,7 @@ body {
 .home #sidebar {
 
   // Center sidebar content
-  text-align: center;
+  text-align: justify;
 
   // Bigger title
   .site-title {
