--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -6,7 +6,7 @@ layout: page
   {{ content }}
 {% endunless %}
 
-<ul class="posts-list">
+<!-- <ul class="posts-list">
   {% assign category = page.category | default: page.title %}
   {% for post in site.categories[category] %}
     <li>
@@ -17,5 +17,42 @@ layout: page
         </a>
       </h3>
     </li>
+  {% endfor %}
+</ul> -->
+
+<ul class="posts-list"></ul>
+  {% assign category = page.category | default: page.title %}
+  {% for post in site.categories[category] %}
+
+  <article class="post-body">
+    <h2 class="post-title">
+      <a href="{{ post.url | relative_url }}">
+        {{ post.title }}
+      </a>
+    </h2>
+    {% include post-meta.html post=post %}
+
+    {% if post.excerpt %}
+      {{ post.excerpt }}
+    {% else %}
+      {{ post.content }}
+    {% endif %}
+
+    {% if post.excerpt %}
+      {% comment %}Excerpt may be equal to content. Check.{% endcomment %}
+      {% capture content_words %}
+        {{ post.content | number_of_words }}
+      {% endcapture %}
+      {% capture excerpt_words %}
+        {{ post.excerpt | number_of_words }}
+      {% endcapture %}
+
+      {% if content_words != excerpt_words %}
+        <a href="{{ post.url | relative_url }}">More &hellip;</a>
+      {% endif %}
+    {% endif %}
+
+  </article>
+    
   {% endfor %}
 </ul>
