--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,4 +1,4 @@
-<p>
+<small>
   &copy; {{ site.time | date: '%Y' }}.
   <a href="{{ "/LICENSE.md" | relative_url }}">MIT License.</a>
-</p>
+</small>
