--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -15,7 +15,7 @@ $brown: #8f5536 !default;
 $amber: #f59e0b !default;
 
 // $root-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif, !default;
-$root-font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', !default;
+$root-font-family: -apple-system, BlinkMacSystemFont, 'Montserrat', 'Open Sans', !default;
 $root-font-size: 1rem !default;
 $root-line-height: 1.5 !default;
 
