--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -1,2 +1,2 @@
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/pizza.png" | relative_url }}" />
-<link rel="shortcut icon" href="{{ "/pizza.ico" | relative_url}}" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/assets/pizza.png" | relative_url }}" />
+<link rel="shortcut icon" href="{{ "/assets/pizza.ico" | relative_url}}" />
