--- a/_includes/page-links.html
+++ b/_includes/page-links.html
@@ -11,3 +11,13 @@
     {% endif %}
   {% endif %}
 {% endfor %}
+
+
+<!-- page-links.html -->
+<!-- {% for page in site.pages %}
+  {% if page.sidebar_link %}
+    {% assign active = (page.url == page.url) %}
+    <a class="page-link {% if active %}active{% endif %}"
+       href="{{ page.url | relative_url }}">{{ page.title }}</a>
+  {% endif %}
+{% endfor %} -->
