--- a/_sass/hydeout/_base.scss
+++ b/_sass/hydeout/_base.scss
@@ -129,3 +129,21 @@ input[type='submit'] {
   width: 100%;
   height: 100%;
 }
+
+.link-with-icon {
+  display: flex;
+  align-items: center; 
+  gap: 0.2em;
+  margin-right: 0.5em;
+
+  &:hover>i {
+    color: #f59e0b;
+  }
+}
+
+.icon-container {
+  display: flex;
+  flex-direction: row; 
+  align-items: center; 
+  justify-content: center;
+}
